[package]
name = "sdl-helpers"
version = "0.1.0"
authors = ["kyle.coffey <kyle.coffey@tamu.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
thiserror = "1.0"
chrono = "0.4"
parking_lot = "0.11"
lazy_static = "1.4"
nalgebra = "0.23"

[dependencies.sdl2]
version = "0.34"
features = ["gfx"]
